Use methods from SequencedCollection.